<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.larmuseau.vinim.Vinim"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textViewZaxis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewYaxis" />

    <TextView
        android:id="@+id/textViewYaxis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewYaxis"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewXaxis" />

    <TextView
        android:id="@+id/textViewXaxis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewZaxis"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <VideoView
        android:id="@+id/videoViewVinim"
        android:layout_width="267dp"
        android:layout_height="170dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setVideoSmiley" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/setVideoSmiley"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewZaxis"
        app:layout_constraintVertical_bias="0.886" />

    <TextView
        android:id="@+id/textViewFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/textviewFrequency"
        app:layout_constraintBottom_toTopOf="@+id/videoViewVinim"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/textViewLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textviewlight"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewZaxis" />

    <TextView
        android:id="@+id/textViewNote1"
        android:layout_width="56dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textviewNote1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textViewNote2"
        app:layout_constraintTop_toBottomOf="@+id/videoViewVinim"
        tools:layout_editor_absoluteY="468dp" />

    <TextView
        android:id="@+id/textViewNote2"
        android:layout_width="56dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="8dp"
        android:text="@string/textviewNote2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textViewNote3"
        app:layout_constraintTop_toBottomOf="@+id/videoViewVinim"
        app:layout_constraintVertical_bias="0.516" />

    <TextView
        android:id="@+id/textViewNote3"
        android:layout_width="56dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="41dp"
        android:layout_marginTop="8dp"
        android:text="@string/textviewNote3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textViewNote4"
        app:layout_constraintTop_toBottomOf="@+id/videoViewVinim"
        app:layout_constraintVertical_bias="0.516" />

    <TextView
        android:id="@+id/textViewNote4"
        android:layout_width="56dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/textviewNote4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoViewVinim"
        app:layout_constraintVertical_bias="0.516" />

    <Button
        android:id="@+id/setVideoLoop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/set_video_loop"
        app:layout_constraintHorizontal_bias="0.624"
        app:layout_constraintLeft_toRightOf="@+id/setVideoSmiley"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.322" />

    <Button
        android:id="@+id/setVideoSmiley"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/set_video_smiley"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.322" />

    <Button
        android:id="@+id/setVideoGutter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_video_gutter"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/setVideoSmiley"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintVertical_bias="0.035" />

    <Button
        android:id="@+id/setVideoMandarinnekes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_video_mandarinnekes"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/setVideoLoop"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.049"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/setVideoGutter"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.624" />

</android.support.constraint.ConstraintLayout>
